update some copy and links

--- a/hardware.html
+++ b/hardware.html
@@ -71,6 +71,30 @@
 							<section class="posts">
 								<article>
 									<header>
+										<h2>Bluetooth Instruments</h2>
+										Skip the wires entirely with these!
+									</header>
+									<p><br/>
+										<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=beatscratch-20&language=en_US&marketplace=amazon&region=US&placement=B018ATKI7C&asins=B018ATKI7C&linkId=2ad77449fc2c040ec75caf659c687661&show_border=true&link_opens_in_new_window=true"></iframe>
+										<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=beatscratch-20&language=en_US&marketplace=amazon&region=US&placement=B018ATKO30&asins=B018ATKO30&linkId=80408c46ce3a5b6e4b561f71af0d838e&show_border=true&link_opens_in_new_window=true"></iframe>
+										<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=beatscratch-20&language=en_US&marketplace=amazon&region=US&placement=B01CRHQY1C&asins=B01CRHQY1C&linkId=88d00314bdd12de4063fa6cd40319584&show_border=true&link_opens_in_new_window=true"></iframe>
+										<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=beatscratch-20&language=en_US&marketplace=amazon&region=US&placement=B01CKGTT6C&asins=B01CKGTT6C&linkId=e056bc5c6af280a9f7aff8adb5bbe052&show_border=true&link_opens_in_new_window=true"></iframe>
+									<p>
+								</article>
+								<article>
+									<header>
+										<h2>USB-C Instruments</h2>
+										Great for USB-C devices because you can use any USB-C cable, like your power cable, to connect
+										your instrument.
+									</header>
+									<p><br/>
+										<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=beatscratch-20&language=en_US&marketplace=amazon&region=US&placement=B07RT68X8F&asins=B07RT68X8F&linkId=909f8d607074f0520a0f1626476b4c08&show_border=true&link_opens_in_new_window=true"></iframe>
+										<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=beatscratch-20&language=en_US&marketplace=amazon&region=US&placement=B071G73J1T&asins=B071G73J1T&linkId=33198c33e8d21e8df13cbfbc9d71dace&show_border=true&link_opens_in_new_window=true"></iframe>
+
+									</p>
+								</article>
+								<article>
+									<header>
 										<h2>USB-B Instruments</h2>
 									</header>
 									<p>
@@ -80,7 +104,8 @@
 									<p><br/>
 										<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=beatscratch-20&language=en_US&marketplace=amazon&region=US&placement=B0100RBPTC&asins=B0100RBPTC&linkId=b3f50186157fafef4f5ad5af523d94b5&show_border=true&link_opens_in_new_window=true"></iframe>
 										<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=beatscratch-20&language=en_US&marketplace=amazon&region=US&placement=B01LY8OUQW&asins=B01LY8OUQW&linkId=8a6333d2ec151f777c1d6b15aaee5b60&show_border=true&link_opens_in_new_window=true"></iframe>
-
+										<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=beatscratch-20&language=en_US&marketplace=amazon&region=US&placement=B00VHKMK64&asins=B00VHKMK64&linkId=e2ab82fedef01811a3641ccf3d36cfe0&show_border=true&link_opens_in_new_window=true"></iframe>
+										<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=beatscratch-20&language=en_US&marketplace=amazon&region=US&placement=B01MFHGQOG&asins=B01MFHGQOG&linkId=cad47d74184aa65200100cac0d2a6479&show_border=true&link_opens_in_new_window=true"></iframe>
 									</p>
 									<h3>Sustain Pedals</h3>
 									<p><br/>
@@ -95,6 +120,7 @@
 										<h2>USB-B to USB-C Cables</h2>
 										<p><br/>
 											<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=beatscratch-20&language=en_US&marketplace=amazon&region=US&placement=B00VKSF39O&asins=B00VKSF39O&linkId=b7fde9e5bdd83d1ba125da33930c2417&show_border=true&link_opens_in_new_window=true"></iframe>
+											<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=beatscratch-20&language=en_US&marketplace=amazon&region=US&placement=B0769DMN7R&asins=B0769DMN7R&linkId=9b3902ea99b0756f8b82342f5156beb8&show_border=true&link_opens_in_new_window=true"></iframe>
 										</p>
 										<h2>USB-B to USB Cables</h2>
 										<p><br/>
@@ -115,7 +141,6 @@
 									<p><br/>
 									<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=beatscratch-20&language=en_US&marketplace=amazon&region=US&placement=B004M8UZG0&asins=B004M8UZG0&linkId=dd55bf9c398cede319c01e075bec5da7&show_border=true&link_opens_in_new_window=true"></iframe>
 									<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=beatscratch-20&language=en_US&marketplace=amazon&region=US&placement=B002M8GBDI&asins=B002M8GBDI&linkId=263d111c41a29e4ddbad7e7119f13895&show_border=true&link_opens_in_new_window=true"></iframe>
-
 									<p>
 									<!-- <a href="images/instrument_select_screenshot.png" class="image fit"><img src="images/instrument_select_screenshot.png" alt="" /></a> -->
 								</article>
@@ -123,25 +148,13 @@
 										<h2>Mini USB to USB-C Cables</h2>
 										<p><br/>
 											<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=beatscratch-20&language=en_US&marketplace=amazon&region=US&placement=B00UUBS0SS&asins=B00UUBS0SS&linkId=b9c99d259276bca9394ab20c5977a37d&show_border=true&link_opens_in_new_window=true"></iframe>
+											<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=beatscratch-20&language=en_US&marketplace=amazon&region=US&placement=B079L5YFJY&asins=B079L5YFJY&linkId=732fbb65c2f6cac56a0906a65f1295bd&show_border=true&link_opens_in_new_window=true"></iframe>
 										</p>
 										<h2>Mini USB to USB Cables</h2>
 										<p><br/>
-										  <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=beatscratch-20&language=en_US&marketplace=amazon&region=US&placement=B00NH11N5A&asins=B00NH11N5A&linkId=7c3bd93771bae916b76acd501204643f&show_border=true&link_opens_in_new_window=true"></iframe>
+											<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=beatscratch-20&language=en_US&marketplace=amazon&region=US&placement=B00NH11N5A&asins=B00NH11N5A&linkId=7c3bd93771bae916b76acd501204643f&show_border=true&link_opens_in_new_window=true"></iframe>
+											<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=beatscratch-20&language=en_US&marketplace=amazon&region=US&placement=B00P0GI68M&asins=B00P0GI68M&linkId=8ab61f8b6936ec16da789d5b0e58c878&show_border=true&link_opens_in_new_window=true"></iframe>
 										</p>
-								</article>
-								<article>
-									<header>
-										<h2>USB-C Instruments</h2>
-										Great for USB-C devices because you can use any other cable, like your power cable, to connect
-										your instrument. These are very recent instruments.
-									</header>
-									<p><br/>
-										<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=beatscratch-20&language=en_US&marketplace=amazon&region=US&placement=B07RT68X8F&asins=B07RT68X8F&linkId=909f8d607074f0520a0f1626476b4c08&show_border=true&link_opens_in_new_window=true"></iframe>
-									</p>
-									<!-- <a href="images/landscape_screenshot.png" class="image fit"><img src="images/landscape_screenshot.png" alt="" /></a>
-									<a href="images/landscape_wide_screenshot.png" class="image fit"><img src="images/landscape_wide_screenshot.png" alt="" /></a>
-									<a href="images/big_tablet_screenshot.png" class="image fit"><img src="images/big_tablet_screenshot.png" alt="" /></a> -->
-
 								</article>
 								<article>
 									<header>
