--- a/index.html
+++ b/index.html
@@ -76,14 +76,17 @@
 								The remainder of this page is about the existing BeatScratch product, an Android-exclusive
 								<a href="https://github.com/Kotlin/anko">Anko</a>/<a href="https://github.com/fluidsynth/fluidsynth">FluidSynth</a>-based
 								music environment. Its next-generation cousin, named BeatFlutter 
-								until it is complete and can be named BeatScratch, can be previewed now on 
+								until it is complete enough to assume the BeatScratch name, can be previewed now on 
 								macOS, iOS, Android, and the Web with 
 								<a href="platforms.html">varying degrees of support on each platform</a>
 								(though mostly they go in that order: priority is being given to the 
 								<a href="href="https://audiokit.org/">AudioKit</a> implementation for Apple platforms).
 							</p>
+							<p>
+								Most docs here have been updated to reflect the pre-release in favor of the legacy app at this point.
+							</p>
+							<h2>Try the Pre-Release:</h2>
 							<table>
-								<tr><td colspan="2"><h2>Try the Pre-Release</h2></td></tr>
 								<tr>
 									<td><h5>macOS</h5></td>
 									<td>
@@ -139,10 +142,11 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
+									<h2>BeatScratch Legacy</h2>
 									<!--span class="date">April 25, 2017</span-->
-									<h2>Unleash your<br />
-									musical potential</h2>
 								</header>
+								<h2>Unleash your<br />
+								musical potential</h2>
 								<a href="images/feature_image.png" class="image main" style="max-width: 600px; height: auto; margin-left: auto; margin-right: auto;"><img src="images/feature_image.png" alt="" /></a>
 								<p>
 								  BeatScratch is <i>not</i> yet another keyboard app. BeatScratch turns
