--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
 									<img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" />
 								</a>
 							</li>
+							<li>
+								<header id="header">
+									<a href="app" class="logo" style="font-size: 1rem; padding: 0.75rem; transform: translate(5px, 7px);">Web Preview</a>
+								</header>
+							</li>
 						</ul>
 					</div>
 
