update hardware page with legal thigns

--- a/hardware.html
+++ b/hardware.html
@@ -64,7 +64,8 @@
 									no controller, <i>a sustain pedal or pitch wheel is recommended</i>.
 								</p>
 								<p>
-									Affiliate links follow; turn off your adblocker (seriously, just whitelist beatscratch.io) to view.
+									Affiliate/ad links for products <i>I recommend</i> follow; turn off your adblocker (seriously, just whitelist beatscratch.io) to view.
+									As an Amazon Associate I earn from qualifying purchases.
 								</p>
 							
 							</section>
