update app with playback

--- a/platforms.html
+++ b/platforms.html
@@ -56,10 +56,22 @@
 											<td style="width:22.5; min-width:180px;"><h3>Web</h3></td>
 										</tr>
 									</thead>
-									<tr><td><h4>Play<br/>On-Screen<br/>Keyboard</h4></td>
+									<tr><td><h4 style="transform:translate(0,-10px)">Play<br/>On-Screen<br/>Keyboard</h4></td>
 										<td colspan="4"><p><h2>Yes</h2></p></td>
 									</tr>
-									<tr><td><h4>Play<br/>Connected<br/>MIDI<br/>Controller</h4></td>
+									<tr><td><h4 style="transform:translate(0,-10px)">Sequencer<br/>Playback</h4></td>
+										<td colspan="4"><p><h2>Yes</h2></p></td>
+										<!-- <td colspan="1"><p><h5>Planned</h5></p></td> -->
+									</tr>
+									<tr><td><h4 style="transform:translate(0,-10px)">Realtime<br/>Playback<br/>Performance</h4></td>
+										<td colspan="3"><p><h2>Yes</h2></p></td>
+										<td colspan="1"><p><h2>No</h2></p></td>
+									</tr>
+									<tr><td><h4 style="transform:translate(0,-10px)">Sequencer<br/>Recording</h4></td>
+										<td colspan="3"><p><h2>Yes</h2></td>
+										<td colspan="1"><p><h2>No</h2></p></td>
+									</tr>
+									<tr><td><h4 style="transform:translate(0,-10px)">Play<br/>Connected<br/>MIDI<br/>Controller</h4></td>
 										<td colspan="3"><p><h2>Yes</h2></p></td>
 										<td colspan="1"><p>
 											<h5>Planned;<br/><a href="https://caniuse.com/#search=midi">See caniuse.com</a></h5>
@@ -67,15 +79,7 @@
 									</tr>
 									<tr><td><h4>128<br/>MIDI<br/>Sounds<br/>+<br/>Drum Patch</h4></td>
 										<td colspan="3"><p><h2>Yes</h2></p></td>
-										<td colspan="1"><p><h5>127; "synth drums"<br/>are the drum patch.<br/>Drum patch doesn't<br/>meet MIDI standard<br/>...yet.</h5></p></td>
-									</tr>
-									<tr><td><h4>Sequencer<br/>Playback</h4></td>
-										<td colspan="3"><p><h3>Yes</h3></p></td>
-										<td colspan="1"><p><h5>Planned</h5></p></td>
-									</tr>
-									<tr><td><h4>Sequencer<br/>Recording</h4></td>
-										<td colspan="3"><p><h3>Yes</h3></td>
-										<td colspan="1"><p><h5>TBD</h5></p></td>
+										<td colspan="1"><p><h5>127; "synth drums"<br/>are the drum patch.</h5></p></td>
 									</tr>
 									<tr>
 										<td><h2>Try It</h2></td>
