--- a/platforms.html
+++ b/platforms.html
@@ -20,13 +20,13 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">BeatScratch</a>
+						<a href="./" class="logo">BeatScratch</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
+							<li><a href="./">Home</a></li>
 							<li><a href="usage.html">Usage</a></li>
 							<li class="active"><a href="platforms.html">Platforms</a></li>
 							<li><a href="hardware.html">Hardware</a></li>
