--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Home</a></li>
+							<li class="active"><a href="./">Home</a></li>
 							<li><a href="usage.html">Usage</a></li>
 							<li><a href="platforms.html">Platforms</a></li>
 							<li><a href="hardware.html">Hardware</a></li>
