--- a/app/index.html
+++ b/app/index.html
@@ -82,10 +82,10 @@ window.onload = function () {
 <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=4044643042');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=1750878228');
       });
     }
   </script>
-<script src="main.dart.js?v=4044643042" type="application/javascript"></script>
+<script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
