--- a/privacy.html
+++ b/privacy.html
@@ -47,7 +47,12 @@
 									<h1>Privacy Policy</h1>
 								</header>
 								<p>
-									BeatScratch doesn't store any data. Music recorded may be submitted to analytics in the future.
+									BeatScratch doesn't store or transmit any of your data anywhere except on-device <i>unless</i> you use the Score URL feature.
+									When you copy/paste Score URLs, they go to an account on <a href="https://paste.ee/"">Paste.ee</a>. Your recorded
+									music data is set to expire via their API and plans are to integrate an "Explore" feature atop this.
+								</p>
+								<p>
+									To copy long Score URLs, turn off your internet and copy.
 								</p>
 							</section>
 
