--- a/app/index.html
+++ b/app/index.html
@@ -15,15 +15,15 @@
   <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 
   <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
-  <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-app.js"></script>
+  <!-- <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-app.js"></script> -->
 
   <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
-  <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-analytics.js"></script>
+  <!-- <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-analytics.js"></script> -->
 
   <!-- Add Firebase products that you want to use -->
-  <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-auth.js"></script>
+  <!-- <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-analytics.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-analytics.js"></script> -->
 
   <!-- MIDI.js -->
   <!-- polyfill -->
@@ -43,6 +43,9 @@
   <!-- /MIDI.js -->
 
   <!-- BeatScratch Plugin and Protobuf dependencies -->
+  <!-- No need for web to know about protobuf currently. 
+    Dart jsify/jsifyProto method converts proto obejcts in to JSON for consumption by this page's JS.
+    With no recording, all we ever need to "notify" the Dart UI with are Strings, bools, ints, and doubles. -->
 <!--  <script src="https://cdn.jsdelivr.net/npm/google-closure-library@20200406.0.0/closure/goog/bootstrap/nodejs.min.js"></script>-->
 <!--  <script src="generated/protos/music_pb.js" type="text/javascript"></script>-->
 <!--  <script src="generated/protos/protobeats_plugin_pb.js" type="text/javascript"></script>-->
@@ -82,7 +85,7 @@ window.onload = function () {
 <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=3703188423');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=440665850');
       });
     }
   </script>
